tests/NormalTests/paczka2/big_fuzzy/27067499.err
Error in line 3: HnjBWv S35 28,0
Error in line 1: qHIyXY49 S717 58,5
Error in line 5: HnjBWv S717 27,7
Error in line 9: HnjBWv S973 43,9
Error in line 26: FciDr S973 44,4
Error in line 20: M1Sj S717 178,9
Error in line 15: qHIyXY49 S786 12,6
Error in line 27: FciDr S717 15,5
Error in line 42: FciDr S35 19,6
Error in line 56: qHIyXY49 S786 62,4
Error in line 55: M1Sj S786 83,6
Error in line 65: M1Sj S717 81,3
Error in line 72: M1Sj S786 92,5
Error in line 86: VNL S717 72,7
Error in line 92: VNL S786 74,7
Error in line 98: FciDr S35 34,4
Error in line 99: HnjBWv S35 31,2
Error in line 117: S973 S35 288,74
Error in line 109: S973 S35 81,0
Error in line 130: S973 S973 47,1
Error in line 128: orsbT2z S717 88,6
Error in line 135: qHIyXY49 S786 82,4
Error in line 134: orsbT2z S973 83,7
Error in line 136: qHIyXY49 S717 7,6
Error in line 121: HnjBWv S35 32,6
Error in line 137: VNL S786 99,0
Error in line 141: HnjBWv S786 34,4
Error in line 152: FciDr Sx5 85,5
Error in line 151: M1Sj S786 14,6
Error in line 145: VNL S97 70,1
Error in line 153: FciDr S35 296,7
Error in line 159: M1Sj S973 98,8
Error in line 138: orsbT2z S786 58,8
Error in line 171: orsbT2z S717 49,6
Error in line 174: HnjBWv S786 42,1
Error in line 176: HnjBWv S717 96,7
Error in line 173: orsbT2z S973 11,1
Error in line 161: VNL S973 45,6
Error in line 181: orsbT2z S35 72,2
Error in line 191: qHIyXY49 S973 27,0
Error in line 196: orsbT2z S973 22,8
Error in line 193: qHIyXY49 S717 62,6
Error in line 204: qHIyXY49 S973 8,1
Error in line 207: qHIyXY49 S717 53,8
Error in line 199: HnjBWv S35 94,6
Error in line 225: FciDr S973 149,06
Error in line 221: VNL S786 91,1
Error in line 227: HnjBWv S786 93,41
Error in line 226: VNL S35 86,6
Error in line 228: qHIyXY49 S786 77,6
Error in line 230: VNL S973 69,5
Error in line 234: VNL S35 21,2
Error in line 235: VNL S786 43,4
Error in line 236: VNL S717 64,8
Error in line 231: qHIyXY49 S35 23,7
Error in line 240: S973 S786 5,2
Error in line 237: VNL S35 90,5
Error in line 224: FciDr S973 79,6
